--- a/source/css/modules/global.scss
+++ b/source/css/modules/global.scss
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-    font: normal 400 18px/1.5 Arial, sans-serif;
+    font: normal 400 18px/1.5 "Sansation", Arial, sans-serif;
     color: $text-color;
     background-color: $primary-color;
 }
