--- a/source/css/modules/global.scss
+++ b/source/css/modules/global.scss
@@ -1,9 +1,11 @@
 html,
 body {
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font: normal 400 18px/1.5 "Sansation", Arial, sans-serif;
     color: $text-color;
     background-color: $primary-color;
