--- a/source/css/modules/global.scss
+++ b/source/css/modules/global.scss
@@ -11,6 +11,35 @@ body {
     background-color: $primary-color;
 }
 
+*::selection {
+    background-color: $primary-color-light;
+}
+
+*::-webkit-scrollbar {
+    width: 13px;
+    height: 13px;
+    border: none;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: $bg-color;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: $primary-color;
+    background-clip: padding-box;
+    border: 1px solid $text-color-invert;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: $primary-color-light;
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: $primary-color;
+}
+
 .sr-only {
     position: absolute;
     width: 1px;
